@@ -18,6 +18,10 @@ Extensions Modules
 Library
 -------
 
+- Issue #2385: distutils.core.run_script() makes __file__ available, so the
+  controlled environment will more closely mirror the typical script
+  environment.  This supports setup.py scripts that refer to data files.
+
 Tests
 -----
 
